--- a/_posts/2020-11-16-distill.md
+++ b/_posts/2020-11-16-distill.md
@@ -1,26 +1,18 @@
 ---
 layout: distill
-title: a distill-style blog post
-description: an example of a distill-style blog post and main elements
+title: Protein-Ligand Binding Site Prediction
+description: Predicting the binding site of a ligand on a protein is a crucial step in drug discovery. This project aims to predict the binding site of a ligand on a protein using a segmentation based deep learning model.
 giscus_comments: true
-date: 2021-05-22
+date: 2020-11-16
 featured: true
 
 authors:
-  - name: Albert Einstein
-    url: "https://en.wikipedia.org/wiki/Albert_Einstein"
+  - name: Roshan
+    url: 
     affiliations:
-      name: IAS, Princeton
-  - name: Boris Podolsky
-    url: "https://en.wikipedia.org/wiki/Boris_Podolsky"
-    affiliations:
-      name: IAS, Princeton
-  - name: Nathan Rosen
-    url: "https://en.wikipedia.org/wiki/Nathan_Rosen"
-    affiliations:
-      name: IAS, Princeton
+      name: IIT Madras
 
-bibliography: 2018-12-22-distill.bib
+bibliography: 2020-11-16-distill.bib
 
 # Optionally, you can add a table of contents to your post.
 # NOTES:
@@ -29,14 +21,14 @@ bibliography: 2018-12-22-distill.bib
 #   - we may want to automate TOC generation in the future using
 #     jekyll-toc plugin (https://github.com/toshimaru/jekyll-toc).
 toc:
-  - name: Equations
+  - name: Introduction
     # if a section has subsections, you can add them as follows:
     # subsections:
     #   - name: Example Child Subsection 1
     #   - name: Example Child Subsection 2
-  - name: Citations
-  - name: Footnotes
-  - name: Code Blocks
+  - name: Traditional Approaches
+  - name: Methodology
+  - name: Conclusion
   - name: Interactive Plots
   - name: Layouts
   - name: Other Typography?
@@ -61,68 +53,27 @@ _styles: >
 
 ---
 
-## Equations
+## Introduction
 
-This theme supports rendering beautiful math in inline and display modes using [MathJax 3](https://www.mathjax.org/) engine.
-You just need to surround your math expression with `$$`, like `$$ E = mc^2 $$`.
-If you leave it inside a paragraph, it will produce an inline expression, just like $$ E = mc^2 $$.
+Inferring knowledge from highly complex and high-dimensional data has always been a challenge in biology. Recently, deep-learning algorithms have taken the world by storm, achieving state-of-the-art results in various tasks like image classification, speech recognition, language translation and object detection. Deep learning algorithms take in raw inputs defined with a set of features and give predictions for the given task based on patterns buried inside. These algorithms perform exceptionally well with a massive amount of data. Since biology is a data-rich field with complex and unstructured data, scientists can apply deep learning for almost all tasks related to biology, potentially revolutionising this field. Deep learning approaches have already improved over previous scores achieved using traditional methods in specific tasks, although the gains in some studies are modest. This method can answer a biological or medical question, identifying essential features and predicting outcomes by harnessing heterogeneity across several dimensions of natural variation. Computer-aided drug design aims to make the drug discovery process faster and cheaper. Current research focuses more on the docking and scoring part of the drug discovery pipeline. However, these methodologies already assume that the protein's binding site is already determined with high confidence. Accurate binding site detection is complex, and current methods are lacking in locating the druggable binding sites with high accuracy.
 
-To use display mode, again surround your expression with `$$` and place it as a separate paragraph.
-Here is an example:
+<div class="row mt-3">
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.html path="assets/img/9.jpg" class="img-fluid rounded z-depth-1" zoomable=true %}
+    </div>
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.html path="assets/img/7.jpg" class="img-fluid rounded z-depth-1" zoomable=true %}
+    </div>
+</div>
+<div class="caption">
+    A simple, elegant caption looks good between image rows, after each row, or doesn't have to be there at all.
+</div>
 
-$$
-\left( \sum_{k=1}^n a_k b_k \right)^2 \leq \left( \sum_{k=1}^n a_k^2 \right) \left( \sum_{k=1}^n b_k^2 \right)
-$$
 
-Note that MathJax 3 is [a major re-write of MathJax](https://docs.mathjax.org/en/latest/upgrading/whats-new-3.0.html) that brought a significant improvement to the loading and rendering speed, which is now [on par with KaTeX](http://www.intmath.com/cg5/katex-mathjax-comparison.php).
+## Traditional Approaches
 
-***
+Traditional approaches for binding cavity detection are typically geometry-based, but there are also examples of tools using binding energy to different chemical probes, sequence conservation (template or evolutionary methods) or a combination of these. For example, the ProBiS<d-cite key="konc2010probis"></d-cite>, a similarity-based tool, uses local surface alignment with sub-residue precision, allowing us to find sites with similar physicochemical properties to the templates stored in the database. Such methods simultaneously detect binding sites and provide insight into their expected properties (they are probably similar to the templates in which they were matched :cry: :disappointed:). Other approaches rely on a two-step algorithm, in which potential pockets are first identified and then scored to select the most probable binding sites. For example, Fpocket<d-cite key="le2009fpocket"></d-cite> is a geometry-based method that finds cavities in a protein’s structure and then scores them. The reverse approach is used in P2RANK<d-cite key="krivak2018p2rank"></d-cite>, which uses a random forest (RF) model to predict the “inaudibility” score for each point on a protein’s surface and cluster points with high scores. The method discussed here developed by Stepniewska-Dziubinska, Marta M., Piotr Zielenkiewicz, and Pawel Siedlecki.<d-cite key="stepniewska2020improving"></d-cite> uses 3D convolution layers to classify each atom in the protein space, whether it belongs to a binding site or not, similar to a 3D segmentation task. Predictions can then be saved as .cmap or .cube files that can be later analyzed in molecular modelling software.
 
-## Citations
-
-Citations are then used in the article body with the `<d-cite>` tag.
-The key attribute is a reference to the id provided in the bibliography.
-The key attribute can take multiple ids, separated by commas.
-
-The citation is presented inline like this: <d-cite key="gregor2015draw"></d-cite> (a number that displays more information on hover).
-If you have an appendix, a bibliography is automatically created and populated in it.
-
-Distill chose a numerical inline citation style to improve readability of citation dense articles and because many of the benefits of longer citations are obviated by displaying more information on hover.
-However, we consider it good style to mention author last names if you discuss something at length and it fits into the flow well — the authors are human and it’s nice for them to have the community associate them with their work.
-
-***
-
-## Footnotes
-
-Just wrap the text you would like to show up in a footnote in a `<d-footnote>` tag.
-The number of the footnote will be automatically generated.<d-footnote>This will become a hoverable footnote.</d-footnote>
-
-***
-
-## Code Blocks
-
-Syntax highlighting is provided within `<d-code>` tags.
-An example of inline code snippets: `<d-code language="html">let x = 10;</d-code>`.
-For larger blocks of code, add a `block` attribute:
-
-<d-code block language="javascript">
-  var x = 25;
-  function(x) {
-    return x * x;
-  }
-</d-code>
-
-**Note:** `<d-code>` blocks do not look good in the dark mode.
-You can always use the default code-highlight using the `highlight` liquid tag:
-
-{% highlight javascript %}
-var x = 25;
-function(x) {
-  return x * x;
-}
-{% endhighlight %}
-
-***
 
 ## Interactive Plots
 
